# svg_path_simplifier

./: Cargo.toml  LICENSE.txt  README.md
demo/: ferris.svgcom  gen.sh  tiger.svgcom
src/: main.rs  svgcom.rs  svgps.rs
