[package]
name = "svg_path_simplifier"
version = "0.2.0-alpha"
edition = "2021"

authors = ["Mark Lagodych <lgd.mrk@gmail.com>"]
description = """Utility that helps plotters understand SVG in the same way that people do"""

[[bin]]
name = "svgps"
path = "src/main.rs"

[dependencies]
usvg = "~0.28"
clap = { version = "~4.1", features = ["derive"] }
kurbo = "~0.9"