[package]
name = "svg_path_simplifier"
version = "0.2.0"
edition = "2021"

authors = ["Mark Lagodych <lgd.mrk@gmail.com>"]
description = """Utility that helps plotters understand SVG in the same way that people do"""
repository = "https://github.com/MarkLagodych/svg_path_simplifier"
license = "MIT"
keywords = ["svg", "plotter"]
exclude = ["/demo"]

[[bin]]
name = "svgps"
path = "src/main.rs"

[dependencies]
# SVG parsing
usvg = "~0.28"
# Curve manipulation
kurbo = "~0.9"
# Command Line Argument Parsing
clap = { version = "~4.1", features = ["derive"] }