[package]
name = "svg_path_simplifier"
version = "0.2.1"
edition = "2021"

authors = ["Mark Lagodych <lgd.mrk@gmail.com>"]
description = """SVG simplifier, converter and autocutter for plotters"""
repository = "https://github.com/MarkLagodych/svg_path_simplifier"
license = "MIT"
keywords = ["svg", "plotter"]
exclude = ["/target", "/demo"]

[[bin]]
name = "svgps"
path = "src/main.rs"

[dependencies]
# SVG parsing
usvg = "~0.28"
# Curve manipulation
kurbo = "~0.9"
# Command Line Argument Parsing
clap = { version = "~4.1", features = ["derive"] }